Worked on text alignment issue on property maangement in responsive

--- a/themes/efora-child/css/prop-man-styles.css
+++ b/themes/efora-child/css/prop-man-styles.css
@@ -36,4 +36,8 @@
 	.prop-man-content ul{
 		margin:0em;
 	}
+
+	.prop-man-content ul li{
+		font-size:18px;
+	}
 }
